--- a/app/app/templates/home.html
+++ b/app/app/templates/home.html
@@ -70,7 +70,7 @@
                         <div class="d-flex flex-column col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Resolução do PFC</h5>
-                                <p class="card-text">Com esta ferramenta Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut, maiores! Id at debitis earum incidunt harum architecto ea! Inventore molestiae repellat quam quaerat eligendi vel, quod voluptatibus officiis quisquam eaque.</p>                            
+                                <p class="card-text">Com esta ferramenta você poderá rodar o Fluxo de Carga para um dado problema do sistema elétrico de potência, após a entrada dos dados por uma planilha excel, basta upar essa planilha na ferramenta e executá-la. Os resultados apresentados contemplam: Matriz de Admitância Nodal do sistema, tensões e potências injetadas nas barras do sistema, os vetores de variáveis e equações do método de newton-raphson para cada iteração até a conversão, bem como as matrizes jacobianas, ao final será apresentado os fluxos e as perdas nos ramos do sistema, e o somatório das perdas sendo esse as perdas em todo sistema.</p>                            
                             </div>
                             <div class="d-flex justify-content-end p-3">
                                 <a href="{{ url_for('pfc') }}" class="p-2 btn btn-primary bg-dark">Utilizar ferramenta</a>
