--- a/app/app/templates/pu_conversion_results.html
+++ b/app/app/templates/pu_conversion_results.html
@@ -62,7 +62,7 @@
                                         {{ value[0]['pu'].multiplier }}{{ value[0]['pu'].measurement_unit }} 
                                     </p>
                                     <p class="text-center p-0 m-0">
-                                        <span class="fw-bold">{{ value[1]['nominal'].name }} {{ value[1]['nominal'].cnx_type }}:</span> 
+                                        <span class="fw-bold">{{ value[1]['nominal'].name }} {{ value[1]['nominal'].cnx_type }} por lado:</span> 
                                         {{ print_template.get_rounded_string(value[1]['nominal'].mag) }}
                                         {{ value[1]['nominal'].multiplier }}{{ value[1]['nominal'].measurement_unit }}
                                          ➡ 
