--- a/app/app/templates/admittance_matrix_results.html
+++ b/app/app/templates/admittance_matrix_results.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
   <div class="row border border-dark rounded px-3 mx-3 my-1">
-    <table class="table">
+    <table class="table table-striped table-hover">
         <thead>
           <tr>
             <th scope="col">#</th>
