--- a/flask/app/templates/index.html
+++ b/flask/app/templates/index.html
@@ -6,7 +6,7 @@
                 <div class="card mb-3">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="../static/home_img/desenho.svg" class="img-fluid rounded-start" alt="...">
+                            <img src="{{ url_for('static', filename='home_img/desenho.svg') }}" class="img-fluid rounded-start" alt="...">
                         </div>
                         <div class="d-flex flex-column col-md-8">
                             <div class="card-body">
@@ -24,7 +24,7 @@
                 <div class="card mb-3">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="../static/home_img/MAN.svg " class="img-fluid rounded-start" alt="...">
+                            <img src="{{ url_for('static', filename='home_img/MAN.svg') }}" class="img-fluid rounded-start" alt="...">
                         </div>
                         <div class="d-flex flex-column col-md-8">
                             <div class="card-body">
@@ -47,7 +47,7 @@
                 <div class="card mb-3">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="../static/home_img//RN.svg" class="img-fluid rounded-start" alt="...">
+                            <img src="{{ url_for('static', filename='home_img/RN.svg') }}" class="img-fluid rounded-start" alt="...">
                         </div>
                         <div class="d-flex flex-column col-md-8">
                             <div class="card-body">
@@ -65,7 +65,7 @@
                 <div class="card mb-3">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="../static/home_img/PFC.svg" class="img-fluid rounded-start" alt="...">
+                            <img src="{{ url_for('static', filename='home_img/PFC.svg') }}" class="img-fluid rounded-start" alt="...">
                         </div>
                         <div class="d-flex flex-column col-md-8">
                             <div class="card-body">
@@ -83,7 +83,7 @@
                 <div class="card mb-3">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="../static/home_img/CC.svg" class="img-fluid rounded-start" alt="...">
+                            <img src="{{ url_for('static', filename='home_img/CC.svg') }}" class="img-fluid rounded-start" alt="...">
                         </div>
                         <div class="d-flex flex-column col-md-8">
                             <div class="card-body">
@@ -101,7 +101,7 @@
                 <div class="card mb-3">
                     <div class="row g-0">
                         <div class="col-md-4">
-                            <img src="../static/home_img/ABI.svg" class="img-fluid rounded-start" alt="...">
+                            <img src="{{ url_for('static', filename='home_img/ABI.svg') }}" class="img-fluid rounded-start" alt="...">
                         </div>
                         <div class="d-flex flex-column col-md-8">
                             <div class="card-body">
